--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Simple JS App</title>
-    <link rel="stylesheet" type="text/css" href="/css/styles.css" >
+    <link rel="stylesheet" type="text/css" href="css/styles.css" >
   </head>
   <body>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
