Added an about page as well as content
-Created an about page

-Added content to the index page as well as the about page.

***Still needs accessibility descriptions added to the pages.***

--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!--Pre-Normailize browser styling-->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Simple JS App</title>
+    <title>Pokedéx</title>
+    <!--The logo that will be displayed in the tab bar/bookmark-->
+    <link rel="shortcut icon" href="img/favicon.png">
     <link rel="stylesheet" type="text/css" href="css/styles.css" >
   </head>
   <body>
-    <script src="js/script.js"></script>
+    <header class="page-header">
+      <div class="page-header-box">
+        <!------------Special power bttn for effects later------------>
+        <div class="header-powerbttn"></div>
+        <!------------Navigation Menu at the top------------>
+        <nav>
+          <ul>
+            <li>
+              <a href="index.html">Pokédex</a> 
+            </li>
+            <li>
+              <a href="about.html">About</a> 
+            </li>
+          </ul>
+        </nav>
+    </div>
+    </header>
+    <div class="pokedex-window">
+      <div class="pokemon-grid">
+        <div class="pokemon-grid__item">
+          <script src="js/script.js"></script>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
