Added tpta11y and aria/alt tags for accessibility purposes.
Added role properties as well.

--- a/about.html
+++ b/about.html
@@ -20,9 +20,12 @@
           <ul>
             <li>
               <a href="index.html">Pokédex</a> 
+          <ul role="menu bar">
+            <li role="presentation">
             </li>
             <li>
               <a href="about.html">About</a> 
+            <li role="presentation">
             </li>
           </ul>
         </nav>
@@ -48,5 +51,6 @@
           <img src="img/linkedin-logo.svg" alt="Linkedin logo. Link leading to linkedin profile page." class="logos"></a>
       </div>
     </div>
+    <script src="js/tota11y.min.js"></script>
   </body>
 </html>
