--- a/index.html
+++ b/index.html
@@ -15,14 +15,18 @@
       <div class="page-header-box">
         <!------------Special power bttn for effects later------------>
         <div class="header-powerbttn"></div>
+        <div class="header-powerbttn" alt="A power button for entertainment putposes with javascript"></div>
         <!------------Navigation Menu at the top------------>
         <nav>
           <ul>
             <li>
               <a href="index.html">Pokédex</a> 
+          <ul role="menu bar">
+            <li role="presentation">
             </li>
             <li>
               <a href="about.html">About</a> 
+            <li role="presentation">
             </li>
           </ul>
         </nav>
@@ -35,5 +39,6 @@
         </div>
       </div>
     </div>
+    <script src="js/tota11y.min.js"></script>
   </body>
 </html>
