Added navigation images and mobile adjustments
-Made some adjustments to mobile page sizes.
-Added some images for rollover navigation links
-Added support for navigation images on mobile devices.

--- a/about.html
+++ b/about.html
@@ -17,15 +17,14 @@
         <div class="header-powerbttn"></div>
         <!------------Navigation Menu at the top------------>
         <nav>
-          <ul>
-            <li>
-              <a href="index.html">Pokédex</a> 
           <ul role="menu bar">
             <li role="presentation">
+              <a href="index.html" role="menu item" aria-label="Link to the home page">
+                <div class="nav-bttn-home"></div></a> 
             </li>
-            <li>
-              <a href="about.html">About</a> 
             <li role="presentation">
+              <a href="about.html" role="menu item" aria-label="Link to the about the author page">
+                <div class="nav-bttn-about"></div></a>
             </li>
           </ul>
         </nav>
