--- a/index.html
+++ b/index.html
@@ -14,19 +14,17 @@
     <header class="page-header">
       <div class="page-header-box">
         <!------------Special power bttn for effects later------------>
-        <div class="header-powerbttn"></div>
         <div class="header-powerbttn" alt="A power button for entertainment putposes with javascript"></div>
         <!------------Navigation Menu at the top------------>
         <nav>
-          <ul>
-            <li>
-              <a href="index.html">Pokédex</a> 
           <ul role="menu bar">
             <li role="presentation">
+              <a href="index.html" role="menu item" aria-label="Link to the home page">
+                <div class="nav-bttn-home"></div></a> 
             </li>
-            <li>
-              <a href="about.html">About</a> 
             <li role="presentation">
+              <a href="about.html" role="menu item" aria-label="Link to the about the author page">
+                <div class="nav-bttn-about"></div></a>
             </li>
           </ul>
         </nav>
