Updated the Index
-Added an inner box within the pokedex-window to be able to move the scrollbar slightly inwards.

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     </div>
     </header>
     <div class="pokedex-window">
-      <div class="pokemon-grid">
-        <div class="pokemon-grid__item">
-          <script src="js/script.js"></script>
+      <div class="pokedex-window-scrollbox">
+          <ul class="pokemon-list"></ul>
         </div>
       </div>
     </div>
+    <script src="js/script.js"></script>
     <script src="js/tota11y.min.js"></script>
   </body>
 </html>
