--- a/about.html
+++ b/about.html
@@ -35,20 +35,21 @@
         <h1>Project Pokédex</h1>
         <p>
           This project is designed and created by Andreas Campan for the purposes of learning javascript that loads data from an external API and enables viewing of data points. <br /> <br/>
-          Check out the github link below for more detail or my. Thanks!
-        </p>        
+          Check out the github link below for project details or other links for more about me. Thanks!
+        </p>
+        <div class="about-logo-box">
+          <a href="https://github.com/AndreasCampan/simple-js-app" target="_blank">
+          <img src="img/github-logo.svg" alt="Github logo. Link leading to Github profile page" class="logos"></a>
+          <a href="https://andreascampan.github.io/AC-portfolio-website/index.html" target="_blank">
+            <img src="img/logo-circle.svg" alt="Web master logo. Link leading to owner's portfolio page." class="logos"></a>
+          <a href="https://stackoverflow.com/users/14316485/andreas-campan" target="_blank">
+            <img src="img/stacklogo.svg" alt="Stackoverflow logo. Link leading to Stackoverflow profile page" class="logos"></a>
+          <a href="https://www.linkedin.com/in/andreas-campan-b00656204" target="_blank">
+            <img src="img/linkedin-logo.svg" alt="Linkedin logo. Link leading to linkedin profile page." class="logos"></a>
+        </div>        
       </div>
       <!--Logos and associated pages on the bottom of the page-->
-      <div class="about-logo-box">
-        <a href="https://github.com/AndreasCampan/simple-js-app" target="_blank">
-        <img src="img/github-logo.svg" alt="Github logo. Link leading to Github profile page" class="logos"></a>
-        <a href="https://andreascampan.github.io/AC-portfolio-website/index.html" target="_blank">
-          <img src="img/logo-circle.svg" alt="Web master logo. Link leading to owner's portfolio page." class="logos"></a>
-        <a href="https://stackoverflow.com/users/14316485/andreas-campan" target="_blank">
-          <img src="img/stacklogo.svg" alt="Stackoverflow logo. Link leading to Stackoverflow profile page" class="logos"></a>
-        <a href="https://www.linkedin.com/in/andreas-campan-b00656204" target="_blank">
-          <img src="img/linkedin-logo.svg" alt="Linkedin logo. Link leading to linkedin profile page." class="logos"></a>
-      </div>
+      
     </div>
     <script src="js/tota11y.min.js"></script>
   </body>
