Updated the index
-Added a polyfill and fetch script for browsers that don't support promises.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         <ul class="pokemon-list"></ul>
       </div>
     </div>
+    <script src="js/promise-polyfill.js"></script>
+    <script src="js/fetch.js"></script>
     <script src="js/script.js"></script>
-    <script src="js/tota11y.min.js"></script>
   </body>
 </html>
