Minor page syntax changes
-Removed redundant spacing
-Added the tota11y js for testing
-Added a container for the pokedex window for styling purposes.

--- a/index.html
+++ b/index.html
@@ -30,13 +30,16 @@
         </nav>
     </div>
     </header>
-    <div class="pokedex-window">
-      <div class="pokedex-window-scrollbox">
-        <ul class="pokemon-list"></ul>
+    <div class="container">
+      <div class="pokedex-window">
+        <div class="pokedex-window-scrollbox">
+          <ul class="pokemon-list"></ul>
+        </div>
       </div>
     </div>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/tota11y.min.js"></script>
   </body>
 </html>
