--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-CA">
   <head>
     <!--Pre-Normailize browser styling-->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -8,22 +8,22 @@
     <title>Pokedéx</title>
     <!--The logo that will be displayed in the tab bar/bookmark-->
     <link rel="shortcut icon" href="img/favicon.png">
-    <link rel="stylesheet" type="text/css" href="css/styles.css" >
+    <link rel="stylesheet" type="text/css" href="css/style.production.css" >
   </head>
   <body>
     <header class="page-header">
       <div class="page-header-box">
         <!------------Special power bttn for effects later------------>
-        <div class="header-powerbttn" alt="A power button for entertainment putposes with javascript"></div>
+        <div class="header-powerbttn"></div>
         <!------------Navigation Menu at the top------------>
         <nav>
-          <ul role="menu bar">
+          <ul role="menu">
             <li role="presentation">
-              <a href="index.html" role="menu item" aria-label="Link to the home page">
+              <a href="index.html" role="menuitem" aria-label="Link to the home page">
                 <div class="nav-bttn-home"></div></a> 
             </li>
             <li role="presentation">
-              <a href="about.html" role="menu item" aria-label="Link to the about the author page">
+              <a href="about.html" role="menuitem" aria-label="Link to the about the author page">
                 <div class="nav-bttn-about"></div></a>
             </li>
           </ul>
