--- a/about.html
+++ b/about.html
@@ -8,47 +8,73 @@
     <title>About Pokédex</title>
     <!--The logo that will be displayed in the tab bar/bookmark-->
     <link rel="shortcut icon" href="img/favicon.png">
-    <link rel="stylesheet" type="text/css" href="css/style.production.css" >
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/styles.css" >
   </head>
   <body>
-    <header class="page-header">
-      <div class="page-header-box">
-        <!------------Special power bttn for effects later------------>
-        <div class="header-powerbttn"></div>
-        <!------------Navigation Menu at the top------------>
-        <nav>
-          <ul role="menu">
-            <li role="presentation">
-              <a href="index.html" role="menuitem" aria-label="Link to the home page">
-                <div class="nav-bttn-home"></div></a> 
-            </li>
-            <li role="presentation">
-              <a href="about.html" role="menuitem" aria-label="Link to the about the author page">
-                <div class="nav-bttn-about"></div></a>
-            </li>
-          </ul>
-        </nav>
-    </div>
-    </header>
-    <div class="pokedex-window">
-      <div class="about-window">
-        <h1>Project Pokédex</h1>
-        <p>
-          This project is designed and created by Andreas Campan for the purposes of learning javascript that loads data from an external API and enables viewing of data points. <br /> <br/>
-          Check out the github link below for project details or other links for more about me. Thanks!
-        </p>
-        <div class="about-logo-box">
-          <a href="https://github.com/AndreasCampan/simple-js-app" target="_blank">
-          <img src="img/github-logo.svg" alt="Github logo. Link leading to Github profile page" class="logos"></a>
-          <a href="https://andreascampan.github.io/AC-portfolio-website/index.html" target="_blank">
-            <img src="img/logo-circle.svg" alt="Web master logo. Link leading to owner's portfolio page." class="logos"></a>
-          <a href="https://stackoverflow.com/users/14316485/andreas-campan" target="_blank">
-            <img src="img/stacklogo.svg" alt="Stackoverflow logo. Link leading to Stackoverflow profile page" class="logos"></a>
-          <a href="https://www.linkedin.com/in/andreas-campan-b00656204" target="_blank">
-            <img src="img/linkedin-logo.svg" alt="Linkedin logo. Link leading to linkedin profile page." class="logos"></a>
-        </div>        
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a href="index.html"><img class="navbar-brand" src="img/iconfinder_Poke_Ball_1703896.svg" width="35px">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Pokedex</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-12 p-4">
+          <h1>Project Pokédex</h1>
+        </div>
+        <div class="row">
+          <div class="col-2"></div>
+          <div class="col">
+            <p>
+              This project is designed and created by Andreas Campan for the purposes of learning javascript that loads data from an external API and enables viewing of data points. <br /> <br/>
+              Check out the github link below for project details or other links for more about me. Thanks!
+            </p>
+          </div>
+          <div class="col-2"></div>
+        </div>
       </div>
     </div>
-    <script src="js/tota11y.min.js"></script>    
+  </main>
+  <footer>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col color logo d-flex justify-content-center fixed-bottom">
+          <a href="https://github.com/AndreasCampan/bootstrap-pokedex" target="_blank">
+            <img src="img/github-logo.svg" alt="Github logo. Link leading to Github profile page" class="logos"></a>
+
+            <a href="https://andreascampan.github.io/AC-portfolio-website/index.html" target="_blank">
+              <img src="img/logo-circle.svg" alt="Web master logo. Link leading to owner's portfolio page." class="logos"></a>
+
+            <a href="https://stackoverflow.com/users/14316485/andreas-campan" target="_blank">
+              <img src="img/stacklogo.svg" alt="Stackoverflow logo. Link leading to Stackoverflow profile page" class="logos"></a>
+
+            <a href="https://www.linkedin.com/in/andreas-campan-b00656204" target="_blank">
+              <img src="img/linkedin-logo.svg" alt="Linkedin logo. Link leading to linkedin profile page." class="logos"></a>
+        </div>
+      </div>
+    </div>
+  </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="js/promise-polyfill.js"></script>
+    <script src="js/fetch.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
