--- a/index.html
+++ b/index.html
@@ -13,24 +13,29 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
-        <a href="index.html"><img class="navbar-brand" src="img/iconfinder_Poke_Ball_1703896.svg" width="35px">
+      <nav class="navbar navbar-expand-sm navbar-dark bg-danger fixed-top">
+        <a href="index.html"><img class="navbar-brand" src="img/iconfinder_Poke_Ball_1703896.svg" width="35px" aria-label="Pokeball Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">Pokedex</a>
+            <li class="nav-item active underline">
+              <a class="nav-link" href="index.html" aria-label="Home page link">Pokedex</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+            <li class="nav-item active underline">
+              <a class="nav-link" href="about.html" aria-label="Link leading to the about page">About</a>
             </li>
           </ul>
           <form class="form-inline my-2 my-sm-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search by Name" aria-label="Search" id="search">
           </form>
+          <a href="https://github.com/AndreasCampan/bootstrap-pokedex" target="_blank">
+            <img src="img/github-logo.svg" alt="Github logo. Link leading to Github profile page" class="logos"></a>
+
+            <a href="https://andreascampan.github.io/AC-portfolio-website/index.html" target="_blank">
+              <img src="img/logo-circle.svg" alt="Web master logo. Link leading to owner's portfolio page." class="logos"></a>
         </div>
       </nav>
     </header>
@@ -43,7 +48,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title te" id="exampleModalCenterTitle">Modal title</h5>
+              <h1 class="modal-title te" id="exampleModalCenterTitle">Modal title</h1>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
@@ -53,31 +58,11 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-
             </div>
           </div>
         </div>
       </div>
     </main>
-    <footer>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col color logo d-flex justify-content-center fixed-bottom">
-            <a href="https://github.com/AndreasCampan/bootstrap-pokedex" target="_blank">
-              <img src="img/github-logo.svg" alt="Github logo. Link leading to Github profile page" class="logos"></a>
-
-              <a href="https://andreascampan.github.io/AC-portfolio-website/index.html" target="_blank">
-                <img src="img/logo-circle.svg" alt="Web master logo. Link leading to owner's portfolio page." class="logos"></a>
-
-              <a href="https://stackoverflow.com/users/14316485/andreas-campan" target="_blank">
-                <img src="img/stacklogo.svg" alt="Stackoverflow logo. Link leading to Stackoverflow profile page" class="logos"></a>
-
-              <a href="https://www.linkedin.com/in/andreas-campan-b00656204" target="_blank">
-                <img src="img/linkedin-logo.svg" alt="Linkedin logo. Link leading to linkedin profile page." class="logos"></a>
-          </div>
-        </div>
-      </div>
-    </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -85,6 +70,5 @@
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch.js"></script>
     <script src="js/script.js"></script>
-]
   </body>
 </html>
