Changed the display of the navbar
-Altered the behaviour of the navbar and updated styling sheet

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-sm navbar-dark bg-danger fixed-top">
+      <nav class="navbar navbar-expand-sm navbar-dark bg-danger">
         <a href="index.html"><img class="navbar-brand" src="img/iconfinder_Poke_Ball_1703896.svg" width="35px" aria-label="Pokeball Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,8 +41,7 @@
     </header>
     <main>
       <div class="container" id="container2">
-        <ul class="pokemon-list row d-flex justify-content-center flex-wrap" style="margin-top: 60px; margin-bottom: 60px;">
-        </ul>
+        <ul class="pokemon-list row d-flex justify-content-center flex-wrap"></ul>
       </div>
       <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
