--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <!--The logo that will be displayed in the tab bar/bookmark-->
     <link rel="shortcut icon" href="img/favicon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/styles.css" >
+    <link rel="stylesheet" type="text/css" href="css/styles.production.css" >
   </head>
   <body>
     <header>
@@ -33,9 +33,8 @@
           </form>
           <a href="https://github.com/AndreasCampan/bootstrap-pokedex" target="_blank">
             <img src="img/github-logo.svg" alt="Github logo. Link leading to Github profile page" class="logos"></a>
-
-            <a href="https://andreascampan.github.io/AC-portfolio-website/index.html" target="_blank">
-              <img src="img/logo-circle.svg" alt="Web master logo. Link leading to owner's portfolio page." class="logos"></a>
+          <a href="https://andreascampan.github.io/AC-portfolio-website/index.html" target="_blank">
+            <img src="img/logo-circle.svg" alt="Web master logo. Link leading to owner's portfolio page." class="logos"></a>
         </div>
       </nav>
     </header>
@@ -58,30 +57,11 @@
       </div>
     </div>
   </main>
-  <footer>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col color logo d-flex justify-content-center fixed-bottom">
-          <a href="https://github.com/AndreasCampan/bootstrap-pokedex" target="_blank">
-            <img src="img/github-logo.svg" alt="Github logo. Link leading to Github profile page" class="logos"></a>
-
-            <a href="https://andreascampan.github.io/AC-portfolio-website/index.html" target="_blank">
-              <img src="img/logo-circle.svg" alt="Web master logo. Link leading to owner's portfolio page." class="logos"></a>
-
-            <a href="https://stackoverflow.com/users/14316485/andreas-campan" target="_blank">
-              <img src="img/stacklogo.svg" alt="Stackoverflow logo. Link leading to Stackoverflow profile page" class="logos"></a>
-
-            <a href="https://www.linkedin.com/in/andreas-campan-b00656204" target="_blank">
-              <img src="img/linkedin-logo.svg" alt="Linkedin logo. Link leading to linkedin profile page." class="logos"></a>
-        </div>
-      </div>
-    </div>
-  </footer>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="js/promise-polyfill.js"></script>
-    <script src="js/fetch.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="js/promise-polyfill.js"></script>
+  <script src="js/fetch.js"></script>
   </body>
 </html>
