--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--The logo that will be displayed in the tab bar/bookmark-->
     <link rel="shortcut icon" href="img/favicon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/styles.css" >
+    <link rel="stylesheet" type="text/css" href="css/styles.production.css" >
   </head>
   <body>
     <header>
@@ -33,9 +33,8 @@
           </form>
           <a href="https://github.com/AndreasCampan/bootstrap-pokedex" target="_blank">
             <img src="img/github-logo.svg" alt="Github logo. Link leading to Github profile page" class="logos"></a>
-
-            <a href="https://andreascampan.github.io/AC-portfolio-website/index.html" target="_blank">
-              <img src="img/logo-circle.svg" alt="Web master logo. Link leading to owner's portfolio page." class="logos"></a>
+          <a href="https://andreascampan.github.io/AC-portfolio-website/index.html" target="_blank">
+            <img src="img/logo-circle.svg" alt="Web master logo. Link leading to owner's portfolio page." class="logos"></a>
         </div>
       </nav>
     </header>
