--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--The logo that will be displayed in the tab bar/bookmark-->
     <link rel="shortcut icon" href="img/favicon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/styles.production.css" >
+    <link rel="stylesheet" type="text/css" href="css/style.production.css" >
   </head>
   <body>
     <header>
