Created a dist folder
-Minified the css
-Minified the js
-changed the directory for the finalized js and css
-Updated about page

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <!--The logo that will be displayed in the tab bar/bookmark-->
     <link rel="shortcut icon" href="img/favicon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/style.production.css" >
+    <link rel="stylesheet" type="text/css" href="dist/style.production.css" >
   </head>
   <body>
     <header>
@@ -49,7 +49,7 @@
           <div class="col">
             <p>
               This project is a redesign of my original vanilla JS pokedex for the purposes of learning Bootstrap and implementing jQuery which loads data from an external API and enables viewing of the data points of each pokemon. <br /> <br/>
-              Check out the github link below for project details and more information about me!
+              Check out the github link above for project details and more information about me!
             </p>
           </div>
           <div class="col-2"></div>
