--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-sm navbar-dark bg-danger fixed-top">
-        <a href="index.html"><img class="navbar-brand" src="img/iconfinder_Poke_Ball_1703896.svg" width="35px" aria-label="Pokeball Logo">
+      <nav class="navbar navbar-expand-sm navbar-dark bg-danger">
+        <a href="index.html"><img class="navbar-brand ball-size" src="img/iconfinder_Poke_Ball_1703896.svg" alt="Pokeball Logo" aria-label="Pokeball Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -22,19 +22,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active underline">
-              <a class="nav-link " href="index.html" aria-label="Home page link">Pokedex</a>
+              <a class="nav-link" href="index.html" aria-label="Home page link">Pokedex</a>
             </li>
             <li class="nav-item active underline">
-              <a class="nav-link " href="about.html" aria-label="Link leading to the about page">About</a>
+              <a class="nav-link" href="about.html" aria-label="Link leading to the about page">About</a>
             </li>
           </ul>
-          <form class="form-inline my-2 my-sm-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search by Name" aria-label="Search" id="search">
-          </form>
           <a href="https://github.com/AndreasCampan/bootstrap-pokedex" target="_blank">
-            <img src="img/github-logo.svg" alt="Github logo. Link leading to Github profile page" class="logos"></a>
-          <a href="https://andreascampan.github.io/AC-portfolio-website/index.html" target="_blank">
-            <img src="img/logo-circle.svg" alt="Web master logo. Link leading to owner's portfolio page." class="logos"></a>
+            <img src="img/github-logo-non-trans.png" alt="Github logo. Link leading to Github profile page" class="logos"></a>
+          <a href="https://andreascampan.github.io/AC-Portfolio/" target="_blank">
+            <img src="img/logo-dark.png" alt="Web master logo. Link leading to owner's portfolio page." class="logos"></a>
         </div>
       </nav>
     </header>
