--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-sm navbar-dark bg-danger">
-        <a href="index.html"><img class="navbar-brand" src="img/iconfinder_Poke_Ball_1703896.svg" width="35px" aria-label="Pokeball Logo">
+        <a href="index.html"><img class="navbar-brand ball-size" src="img/iconfinder_Poke_Ball_1703896.svg" alt="Pokeball Logo" aria-label="Pokeball Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -32,9 +32,9 @@
             <input class="form-control mr-sm-2" type="search" placeholder="Search by Name" aria-label="Search" id="search">
           </form>
           <a href="https://github.com/AndreasCampan/bootstrap-pokedex" target="_blank">
-            <img src="img/github-logo.svg" alt="Github logo. Link leading to Github profile page" class="logos"></a>
-          <a href="https://andreascampan.github.io/AC-portfolio-website/index.html" target="_blank">
-            <img src="img/logo-circle.svg" alt="Web master logo. Link leading to owner's portfolio page." class="logos"></a>
+            <img src="img/github-logo-non-trans.png" alt="Github logo. Link leading to Github profile page" class="logos"></a>
+          <a href="https://andreascampan.github.io/AC-Portfolio/" target="_blank">
+            <img src="img/logo-dark.png" alt="Web master logo. Link leading to owner's portfolio page." class="logos"></a>
         </div>
       </nav>
     </header>
