--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active underline">
-              <a class="nav-link" href="index.html" aria-label="Home page link">Pokedex</a>
+              <a class="nav-link" href="index.html" aria-label="Home page link">Pokedéx</a>
             </li>
             <li class="nav-item active underline">
               <a class="nav-link" href="about.html" aria-label="Link leading to the about page">About</a>
