--- a/about.html
+++ b/about.html
@@ -45,8 +45,8 @@
           <div class="col-2"></div>
           <div class="col">
             <p>
-              This project is a redesign of my original vanilla JS pokedéx for the purposes of learning Bootstrap. This project loads data from an external API and enables viewing of the data points of each pokemon. <br /> <br/>
-              Check out the github link above for project details and more information about me!
+              This project is a redesign of my original vanilla JS pokedéx for the purposes of learning Bootstrap. This project loads data from an external API and enables viewing of the data points of each pokémon. <br /> <br/>
+              Checkout the github link above for project details and more information about me!
             </p>
           </div>
           <div class="col-2"></div>
