Modified some spelling

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pokedéx</title>
+    <title>Pokédex</title>
     <!--The logo that will be displayed in the tab bar/bookmark-->
     <link rel="shortcut icon" href="img/favicon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -14,7 +14,7 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-sm navbar-dark bg-danger">
-        <a href="index.html"><img class="navbar-brand ball-size" src="img/iconfinder_Poke_Ball_1703896.svg" alt="Pokeball Logo" aria-label="Pokeball Logo">
+        <a href="index.html"><img class="navbar-brand ball-size" src="img/iconfinder_Poke_Ball_1703896.svg" alt="Pokéball Logo" aria-label="Pokéball Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active underline">
-              <a class="nav-link" href="index.html" aria-label="Home page link">Pokedéx</a>
+              <a class="nav-link" href="index.html" aria-label="Home page link">Pokédex</a>
             </li>
             <li class="nav-item active underline">
               <a class="nav-link" href="about.html" aria-label="Link leading to the about page">About</a>
