--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-sm navbar-dark bg-danger">
-        <a href="index.html"><img class="navbar-brand ball-size" src="img/iconfinder_Poke_Ball_1703896.svg" alt="Pokeball Logo" aria-label="Pokeball Logo">
+        <a href="index.html"><img class="navbar-brand ball-size" src="img/iconfinder_Poke_Ball_1703896.svg" alt="Pokéball Logo" aria-label="Pokéball Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active underline">
-              <a class="nav-link" href="index.html" aria-label="Home page link">Pokedéx</a>
+              <a class="nav-link" href="index.html" aria-label="Home page link">Pokédex</a>
             </li>
             <li class="nav-item active underline">
               <a class="nav-link" href="about.html" aria-label="Link leading to the about page">About</a>
@@ -39,13 +39,13 @@
     <div class="container">
       <div class="row text-center">
         <div class="col-12 mt-5 pt-5 mb-3">
-          <h2>About Project Pokedéx</h2>
+          <h2>About Project Pokédex</h2>
         </div>
         <div class="row">
           <div class="col-2"></div>
           <div class="col">
             <p>
-              This project is a redesign of my original vanilla JS pokedéx for the purposes of learning Bootstrap. This project loads data from an external API and enables viewing of the data points of each pokémon. <br /> <br/>
+              This project is a redesign of my original vanilla JS pokédex for the purposes of learning Bootstrap. This project loads data from an external API and enables viewing of the data points of each pokémon. <br /> <br/>
               Checkout the github link above for project details and more information about me!
             </p>
           </div>
