--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
           </ul>
           <a href="https://github.com/AndreasCampan/bootstrap-pokedex" target="_blank">
             <img src="img/github-logo-non-trans.png" alt="Github logo. Link leading to Github profile page" class="logos"></a>
-          <a href="https://andreascampan.github.io/AC-Portfolio/" target="_blank">
+          <a href="https://andreascampan.com" target="_blank">
             <img src="img/logo-dark.png" alt="Web master logo. Link leading to owner's portfolio page." class="logos"></a>
         </div>
       </nav>
